--- a/Backend/Usuario/templates/usuario_list_anonimo.html
+++ b/Backend/Usuario/templates/usuario_list_anonimo.html
@@ -10,11 +10,11 @@
             margin: 20px;
             border: 1px solid #ccc;
             padding: 10px;
-            border-radius: 5px; /* Bordes redondeados */
-            background-color: #f8f9fa; /* Color de fondo */
+            border-radius: 5px; 
+            background-color: #f8f9fa; 
         }
         .imagen {
-            max-width: 100px; /* Ajusta el tamaño de la imagen */
+            max-width: 100px; 
             max-height: 100px;
         }
     </style>
