--- a/Backend/Turno/templates/turno_list.html
+++ b/Backend/Turno/templates/turno_list.html
@@ -1,4 +1,3 @@
-<!-- turno_list.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -9,23 +8,23 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <style>
         body {
-            background-color: #f8f9fa; /* Fondo suave */
+            background-color: #f8f9fa; 
         }
         h1 {
-            color: #343a40; /* Color del título */
+            color: #343a40; 
         }
         .card {
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra de la tarjeta */
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /
         }
         .table th, .table td {
-            vertical-align: middle; /* Alinear el texto en el medio */
+            vertical-align: middle; 
         }
         .btn {
-            transition: background-color 0.3s, transform 0.2s; /* Transición suave al cambiar el color y al hacer hover */
+            transition: background-color 0.3s, transform 0.2s; 
         }
         .btn:hover {
-            opacity: 0.8; /* Efecto de opacidad al pasar el mouse */
-            transform: scale(1.05); /* Efecto de aumento al pasar el mouse */
+            opacity: 0.8; 
+            transform: scale(1.05); 
         }
     </style>
 </head>
