Creación de base.html templates extends y insert

--- a/Backend/Usuario/templates/usuario_form.html
+++ b/Backend/Usuario/templates/usuario_form.html
@@ -1,26 +1,15 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% if form.instance.id %}Editar Usuario{% else %}Crear Usuario{% endif %}</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="container mt-5">
-        <h1 class="text-center mb-4">{% if form.instance.id %}Editar Usuario{% else %}Crear Usuario{% endif %}</h1>
-        <form method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <div class="form-group">
-                {{ form.as_p|safe }}
-            </div>
-            <button type="submit" class="btn btn-primary btn-block">Guardar</button>
-        </form>
-        <a href="{% url 'listar_usuarios' %}" class="btn btn-secondary mt-3 btn-block">Cancelar</a>
-    </div>
+{% extends "base.html" %}
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+{% block title %}{% if form.instance.id %}Editar Usuario{% else %}Crear Usuario{% endif %}{% endblock %}
+
+{% block content %}
+    <h1 class="text-center mb-4">{% if form.instance.id %}Editar Usuario{% else %}Crear Usuario{% endif %}</h1>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="form-group">
+            {{ form.as_p }}
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Guardar</button>
+    </form>
+    <a href="{% url 'listar_usuarios' %}" class="btn btn-secondary mt-3 btn-block">Cancelar</a>
+{% endblock %}
