--- a/Backend/Turno/templates/cambiar_estado.html
+++ b/Backend/Turno/templates/cambiar_estado.html
@@ -1,31 +1,22 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cambiar Estado del Turno</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="container mt-5">
-        <h1 class="text-center mb-4">Cambiar Estado del Turno</h1>
-        <form method="post">
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="estado">Nuevo Estado:</label>
-                <select name="estado" id="estado" class="form-control">
-                    <option value="pendiente">Pendiente</option>
-                    <option value="completado">Completado</option>
-                    <option value="cancelado">Cancelado</option>
-                </select>
-            </div>
-            <button type="submit" class="btn btn-primary">Guardar Cambios</button>
-        </form>
-        <a href="{% url 'listar_turnos' %}" class="btn btn-secondary mt-3">Cancelar</a>
-    </div>
+{% extends 'bases.html' %}
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+{% block title %}Cambiar estado del Turno{% endblock %}
+
+{% block content %}
+<div class="container mt-5">
+    <h1 class="text-center mb-4">Cambiar Estado del Turno</h1>
+    <form method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            <label for="estado">Nuevo Estado:</label>
+            <select name="estado" id="estado" class="form-control">
+                <option value="pendiente">Pendiente</option>
+                <option value="completado">Completado</option>
+                <option value="cancelado">Cancelado</option>
+            </select>
+        </div>
+        <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+    </form>
+    <a href="{% url 'listar_turnos' %}" class="btn btn-secondary mt-3">Cancelar</a>
+</div>
+{% endblock %}
