--- a/Backend/Turno/templates/turno_form.html
+++ b/Backend/Turno/templates/turno_form.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <title>{% if form.instance.id %}Editar Turno{% else %}Crear Turno{% endif %}</title>
-</head>
-<body>
-    <div class="container mt-5">
-        <h1 class="text-center mb-4">{% if form.instance.id %}Editar Turno{% else %}Crear Turno{% endif %}</h1>
+
+{% extends 'bases.html' %}
+
+{% block title %}Formulario Turno{% endblock %}
+
+{% block content %}
+<div class="container mt-5">
+    <h1 class="text-center mb-4">{% if form.instance.id %}Editar Turno{% else %}Crear Turno{% endif %}</h1>
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
@@ -16,10 +13,5 @@
             </div>
             <button type="submit" class="btn btn-primary btn-block">Guardar</button>
         </form>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+</div>
+{% endblock %}
