--- a/Backend/Turno/templates/turnos_pendientes.html
+++ b/Backend/Turno/templates/turnos_pendientes.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Últimos Turnos Pendientes</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="container mt-5">
-        <h1 class="text-center">Últimos Turnos Pendientes</h1>
+{% extends 'bases.html' %}
+
+{% block title %}Turnos Pendientes{% endblock %}
+
+{% block content %}
+<div class="container mt-5">
+    <h1 class="text-center">Últimos Turnos Pendientes</h1>
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -36,10 +32,5 @@
             </tbody>
         </table>
         <a href="{% url 'listar_turnos' %}" class="btn btn-primary">Regresar</a>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+</div>
+{% endblock %}
